# SiliconScratchCpp

./: .gitignore  CMakeLists.txt  README.md  compilerThoughts.txt
src/: CMakeLists.txt
src/main/: Block.cpp  Block.h  CMakeLists.txt  ComputeKind.cpp  ComputeKind.h  Constant.cpp  Constant.h  Event.cpp  Event.h  Instruction.cpp  Instruction.h  InstructionImpl.cpp  InstructionImpl.h  LValue.cpp  LValue.h  Lazy.h  List.cpp  List.h  Program.cpp  Program.h  Scope.cpp  Scope.h  Script.cpp  Script.h  Sprite.cpp  Sprite.h  SpriteScripts.cpp  SpriteScripts.h  Value.cpp  Value.h  ValueKind.cpp  ValueKind.h  Variable.cpp  Variable.h  main.cpp  main.h
src/main/events/: BroadCast.cpp  BroadCast.h  Click.cpp  Click.h  Condition.cpp  Condition.h  KeyPress.cpp  KeyPress.h
src/main/instructions/: ScratchBlock.cpp  ScratchBlock.h
src/main/instructions/block/operator/: Abs.cpp  Abs.h  Add.cpp  Add.h  Divide.cpp  Divide.h  Max.cpp  Max.h  Min.cpp  Min.h  Multiply.cpp  Multiply.h  Negate.cpp  Negate.h  Operator.cpp  Operator.h  Operator1.cpp  Operator1.h  Operator2.cpp  Operator2.h  Subtract.cpp  Subtract.h
src/main/type/: List.cpp  List.h  Polymorphic.cpp  Polymorphic.h  Primitive.cpp  Primitive.h  Type.cpp  Type.h  TypeBase.cpp  TypeBase.h  TypeKind.cpp  TypeKind.h  types.cpp  types.h
src/share/aio/signal/mask/: Masked.h
src/share/io/: ReadOnlyMappedMemory.h
src/share/lib/corrade/: CorradeArrayView.h
src/share/llvm/: Api.cpp  Api.h  Constants.cpp  Constants.h  IRBuilderExt.h
src/share/stde/: SmallPtr.cpp  SmallPtr.h
